# gima-magnetometer

./: .gitignore  .travis.yml  LoadGIMA.py  README.md  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml
gimamag/: __init__.py  plots.py
src/gimamag/tests/: test_all.py
tests/: poker_2017_11_16_10.nc  test.py  test_all.py
