[metadata]
name = gima_magnetometer
version = 0.6.2
author = Michael Hirsch, Ph.D.
author_email = scivision@users.noreply.github.com
description = Plotting and analysis of UAF GIMA Magnetometer data
url = https://github.com/space-physics/gima-magnetometer
keywords =
  magnetometer
  geomagnetic
classifiers =
  Development Status :: 4 - Beta
  Environment :: Console
  Intended Audience :: Science/Research
  License :: OSI Approved :: MIT License
  Programming Language :: Python :: 3
  Topic :: Scientific/Engineering :: GIS
license_files =
  LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.6
include_package_data = True
packages = find:
install_requires =
  numpy
  python-dateutil
  xarray
  netcdf4
package_dir=
    =src

[options.packages.find]
where=src

[options.extras_require]
tests =
  pytest
lint =
  flake8
  mypy
plot =
  matplotlib
  seaborn
